// awesome.proto
package awesomepackage;
syntax = "proto3";
 
message AwesomeMessage {
    string first_name = 1; // becomes awesomeField
    string last_name = 2;
    string address = 3;
    string mood = 4;
}